2009-02-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/category/BarRenderer.java
    (defaultShadowsVisible): New field,
    (getDefaultShadowsVisible): New method,
    (setShadowsVisible): Likewise,
    * source/org/jfree/renderer/xy/XYBarRenderer.java
    (defaultShadowsVisible): New field,
    (getDefaultShadowsVisible): New method,
    (setShadowsVisible): Likewise.

2009-02-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/category/StackedBarRenderer3D.java
    (findRangeBounds): Check for null dataset,
    * tests/org/jfree/chart/renderer/category/junit/StackedBarRenderer3DTests.java
    (testFindRangeBounds): New test.

2009-02-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/GrayPaintScale.java
    (alpha): New field,
    (GrayPaintScale(double, double)): Delegate to new constructor,
    (GrayPaintScale(double, double, int)): New constructor,
    (getAlpha): New method,
    (getPaint): Use alpha setting for returned paint,
    (equals): Check new field,
    (hashCode): New method,
    * tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
    (testEquals): Check new field.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYErrorRenderer.java
    (errorStroke): New field,
    (XYErrorRenderer): Initialise new field,
    (getErrorStroke): New method,
    (setErrorStroke): Likewise,
    (drawItem): Updated to use new errorStroke or else item outline stroke,
    (equals): Check new field,
    (readObject): Handle new field,
    (writeObject): Likewise,
    * tests/org/jfree/chart/renderer/xy/junit/XYErrorRendererTests.java
    (testEquals): Added check for errorStroke field,
    (testCloning2): New test,
    (testSerialization2): Likewise.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DataUtilities.java